// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination #render should render as expected (1) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            1 - 25
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="25">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        25
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="1" total-pages="40">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="1">
              </gux-input-text-like>
            </div>
            <div>
              of 40
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (2) 1`] = `
<gux-pagination current-page="1" items-per-page="50" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="1" items-per-page="50" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            1 - 50
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="50">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        50
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="1" total-pages="20">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="1">
              </gux-input-text-like>
            </div>
            <div>
              of 20
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (3) 1`] = `
<gux-pagination current-page="1" items-per-page="75" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="1" items-per-page="75" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            1 - 75
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="75">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        75
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="1" total-pages="14">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="1">
              </gux-input-text-like>
            </div>
            <div>
              of 14
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (4) 1`] = `
<gux-pagination current-page="1" items-per-page="100" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="1" items-per-page="100" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            1 - 100
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="100">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        100
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="1" total-pages="10">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="1">
              </gux-input-text-like>
            </div>
            <div>
              of 10
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (5) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            1 - 25
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="25">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        25
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="1" total-pages="40">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="1">
              </gux-input-text-like>
            </div>
            <div>
              of 40
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (6) 1`] = `
<gux-pagination current-page="10" items-per-page="25" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="10" items-per-page="25" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            226 - 250
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="25">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        25
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="10" total-pages="40">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="10">
              </gux-input-text-like>
            </div>
            <div>
              of 40
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (7) 1`] = `
<gux-pagination current-page="10" items-per-page="50" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="10" items-per-page="50" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            451 - 500
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="50">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        50
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="10" total-pages="20">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="10">
              </gux-input-text-like>
            </div>
            <div>
              of 20
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (8) 1`] = `
<gux-pagination current-page="10" items-per-page="75" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="10" items-per-page="75" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            676 - 750
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="75">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        75
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="10" total-pages="14">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="10">
              </gux-input-text-like>
            </div>
            <div>
              of 14
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (9) 1`] = `
<gux-pagination current-page="10" items-per-page="100" layout="full" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="10" items-per-page="100" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            901 - 1,000
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
      <gux-pagination-items-per-page items-per-page="100">
        <div class="gux-pagination-items-per-page-container">
          <div class="gux-pagination-items-per-page-picker">
            <gux-dropdown-v2-beta>
              <mock:shadow-root>
                <gux-popup-beta>
                  <button aria-expanded="false" aria-haspopup="listbox" class="gux-field-button" slot="target" type="button">
                    <div class="gux-selected-option">
                      <div class="gux-selected-option">
                        100
                      </div>
                    </div>
                    <gux-icon class="gux-expand-icon" decorative="" iconname="chevron-small-down"></gux-icon>
                  </button>
                  <div class="gux-listbox-container" slot="popup">
                    <slot></slot>
                  </div>
                </gux-popup-beta>
              </mock:shadow-root>
              <gux-listbox role="listbox" tabindex="0">
                <mock:shadow-root>
                  <slot></slot>
                </mock:shadow-root>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  25
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  50
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                  <!---->
                  75
                </gux-option-v2>
                <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                  <!---->
                  100
                </gux-option-v2>
              </gux-listbox>
            </gux-dropdown-v2-beta>
          </div>
          <div>
            per page
          </div>
        </div>
      </gux-pagination-items-per-page>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="10" total-pages="10">
        <div class="gux-full gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-input-container">
            <div>
              Page
            </div>
            <div class="gux-pagination-buttons-input">
              <gux-input-text-like>
                <input slot="input" value="10">
              </gux-input-text-like>
            </div>
            <div>
              of 10
            </div>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (10) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="small" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-info">
      <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
        <div class="gux-pagination-item-counts-container">
          <span class="gux-pagination-item-counts-range">
            1 - 25
          </span>
          <span>
            of 1,000
          </span>
        </div>
      </gux-pagination-item-counts>
    </div>
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="1" total-pages="40">
        <div class="gux-pagination-buttons-container gux-small">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-spacer"></div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (11) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="expanded" total-items="1000">
  <div class="gux-pagination-container">
    <div class="gux-pagination-change">
      <gux-pagination-buttons current-page="1" total-pages="40">
        <div class="gux-expanded gux-pagination-buttons-container">
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="First" type="button">
                <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" disabled="" title="Previous" type="button">
                <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
              </button>
            </gux-button>
          </div>
          <div class="gux-pagination-buttons-list-container">
            <button class="gux-pagination-buttons-list-current">
              1
            </button>
            <button class="gux-pagination-buttons-list-target">
              2
            </button>
            <button class="gux-pagination-buttons-list-target">
              3
            </button>
            <button class="gux-pagination-buttons-list-target">
              4
            </button>
            <button class="gux-pagination-buttons-list-target">
              5
            </button>
            <button class="gux-pagination-buttons-list-target">
              6
            </button>
            <button class="gux-pagination-buttons-list-target">
              ...
            </button>
            <button class="gux-pagination-buttons-list-target">
              40
            </button>
          </div>
          <div class="gux-pagination-buttons-group">
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Next" type="button">
                <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
              </button>
            </gux-button>
            <gux-button>
              <!---->
              <button class="gux-secondary" title="Last" type="button">
                <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
              </button>
            </gux-button>
          </div>
        </div>
      </gux-pagination-buttons>
    </div>
  </div>
</gux-pagination>
`;
